feat: fix WordleGame input